[project]
name = "recipe-bot"
version = "0.1.0"
description = "Recipe bot for homeworks on evals course"
authors = [{name = "Recipe Bot", email = "recipe@bot.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "braintrust>=0.2.0",
    "autoevals>=0.0.129",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ['py38'] 
